src/components/Forms/SignatureCountSlider/style.module.less
@import '../../style/vars.less';

.sliderContainer {
    display: flex;
    margin-top: 1rem;
}

.textInput {
    margin-left: 1rem;
    font-size: @fontSizeL;
}

// DA SLIDER 👇

@track-color: var(--font-color);
@thumb-color: var(--font-color);

@thumb-radius: 50%;
@thumb-height: 3rem;
@thumb-width: 3rem;
@thumb-border-width: 0;
@thumb-border-color: white;

@track-width: 100%;
@track-height: 0.5rem;
@track-border-width: 0;
@track-border-color: black;

@track-radius: 0;

.track() {
  width: @track-width;
  height: @track-height;
  cursor: pointer;
  animate: 0.2s;
}

.thumb() {
  border: @thumb-border-width solid @thumb-border-color;
  height: @thumb-height;
  width: @thumb-width;
  border-radius: @thumb-radius;
  background: @thumb-color;
  cursor: pointer;
}

.input {
  -webkit-appearance: none;
  margin: (@thumb-height / 2) 0;
  width: @track-width;

  &:focus {
    outline: none;
  }

  &::-webkit-slider-runnable-track {
    .track();
    background: @track-color;
    border-radius: @track-radius;
    border: @track-border-width solid @track-border-color;
  }

  &::-webkit-slider-thumb {
    .thumb();
    -webkit-appearance: none;
    margin-top: (((-@track-border-width * 2 + @track-height) / 2) - (@thumb-height / 2));
  }

  &:focus::-webkit-slider-runnable-track {
    background: @track-color;
  }

  &::-moz-range-track {
    .track();
    background: @track-color;
    border-radius: @track-radius;
     border: @track-border-width solid @track-border-color;
  }
  &::-moz-range-thumb {
     .thumb();
  }

  &::-ms-track {
    .track();
    background: transparent;
    border-color: transparent;
    border-width: @thumb-width 0;
    color: transparent;
  }

  &::-ms-fill-lower {
    background: @track-color;
    border: @track-border-width solid @track-border-color;
    border-radius: (@track-radius * 2);
  }
  &::-ms-fill-upper {
    background: @track-color;
    border: @track-border-width solid @track-border-color;
    border-radius: (@track-radius * 2);
  }
  &::-ms-thumb {
    .thumb();
  }
  &:focus::-ms-fill-lower {
    background: @track-color;
  }
  &:focus::-ms-fill-upper {
    background: @track-color;
  }
}

